Refactor documentation content: Update various lessons by enhancing examples, descriptions, and challenges for improved clarity and engagement. Adjust output display for better responsiveness and readability, ensuring a more effective learning experience across topics including "Comentarios", "Tipos de Datos", "Control de Flujo en Bucles", and others.

--- a/lib/content/bucles-avanzados/docs.mdx
+++ b/lib/content/bucles-avanzados/docs.mdx
@@ -7,49 +7,22 @@ Los bucles avanzados te permiten trabajar con estructuras más complejas: bucles
 Puedes poner un bucle dentro de otro bucle. Como tener múltiples playlists y reproducir todas las canciones de cada playlist.
 
 <Code code={`para (variable playlist = 1; playlist <= 3; playlist++) {
-    mostrar "=== PLAYLIST " + playlist + " ==="
+    mostrar "=== PLAYLIST " + playlist + " ===" // === PLAYLIST 1 ===, === PLAYLIST 2 ===, === PLAYLIST 3 ===
 
     para (variable cancion = 1; cancion <= 4; cancion++) {
-        mostrar "  Canción " + cancion
+        mostrar "  Canción " + cancion // Canción 1, Canción 2, Canción 3, Canción 4
     }
 
-    mostrar ""
+    mostrar "" // (línea vacía)
 }
 
 para (variable album = 1; album <= 2; album++) {
-    mostrar "ÁLBUM " + album
+    mostrar "ÁLBUM " + album // ÁLBUM 1, ÁLBUM 2
 
     para (variable track = 1; track <= 3; track++) {
-        mostrar "  Track " + track + " del álbum " + album
+        mostrar "  Track " + track + " del álbum " + album // Track 1 del álbum 1, Track 2 del álbum 1, ...
     }
 }`} />
-
-<Output text={`=== PLAYLIST 1 ===
-  Canción 1
-  Canción 2
-  Canción 3
-  Canción 4
-
-=== PLAYLIST 2 ===
-  Canción 1
-  Canción 2
-  Canción 3
-  Canción 4
-
-=== PLAYLIST 3 ===
-  Canción 1
-  Canción 2
-  Canción 3
-  Canción 4
-
-ÁLBUM 1
-  Track 1 del álbum 1
-  Track 2 del álbum 1
-  Track 3 del álbum 1
-ÁLBUM 2
-  Track 1 del álbum 2
-  Track 2 del álbum 2
-  Track 3 del álbum 2`} />
 
 - Bucle externo: se ejecuta pocas veces (playlists)
 - Bucle interno: se ejecuta muchas veces (canciones por playlist)
@@ -61,8 +34,8 @@ para (variable album = 1; album <= 2; album++) {
 
 Los bucles anidados son perfectos para crear estructuras en forma de tabla.
 
-<Code code={`mostrar "=== TABLA DE MULTIPLICAR ==="
-mostrar ""
+<Code code={`mostrar "=== TABLA DE MULTIPLICAR ===" // === TABLA DE MULTIPLICAR ===
+mostrar "" // (línea vacía)
 
 para (variable fila = 1; fila <= 5; fila++) {
     variable linea = ""
@@ -72,47 +45,21 @@ para (variable fila = 1; fila <= 5; fila++) {
         linea = linea + producto + "	"
     }
 
-    mostrar linea
+    mostrar linea // 1 2 3 4 5, 2 4 6 8 10, 3 6 9 12 15, ...
 }
 
-mostrar ""
-mostrar "=== HORARIO SEMANAL ==="
-mostrar ""
+mostrar "" // (línea vacía)
+mostrar "=== HORARIO SEMANAL ===" // === HORARIO SEMANAL ===
+mostrar "" // (línea vacía)
 
 para (variable dia = 1; dia <= 3; dia++) {
-    mostrar "Día " + dia + ":"
+    mostrar "Día " + dia + ":" // Día 1:, Día 2:, Día 3:
 
     para (variable hora = 9; hora <= 11; hora++) {
-        mostrar "  " + hora + ":00 - Clase"
+        mostrar "  " + hora + ":00 - Clase" // 9:00 - Clase, 10:00 - Clase, 11:00 - Clase
     }
-    mostrar ""
+    mostrar "" // (línea vacía)
 }`} />
-
-<Output text={`=== TABLA DE MULTIPLICAR ===
-
-1	2	3	4	5
-2	4	6	8	10
-3	6	9	12	15
-4	8	12	16	20
-5	10	15	20	25
-
-=== HORARIO SEMANAL ===
-
-Día 1:
-  9:00 - Clase
-  10:00 - Clase
-  11:00 - Clase
-
-Día 2:
-  9:00 - Clase
-  10:00 - Clase
-  11:00 - Clase
-
-Día 3:
-  9:00 - Clase
-  10:00 - Clase
-  11:00 - Clase
-`} />
 
 - El bucle externo controla las filas
 - El bucle interno controla las columnas
@@ -123,7 +70,7 @@ Día 3:
 
 Los bucles pueden crear patrones visuales interesantes.
 
-<Code code={`mostrar "=== TRIÁNGULO ==="
+<Code code={`mostrar "=== TRIÁNGULO ===" // === TRIÁNGULO ===
 
 para (variable fila = 1; fila <= 5; fila++) {
     variable estrellas = ""
@@ -132,11 +79,11 @@ para (variable fila = 1; fila <= 5; fila++) {
         estrellas = estrellas + "* "
     }
 
-    mostrar estrellas
+    mostrar estrellas // *, * *, * * *, * * * *, * * * * *
 }
 
-mostrar ""
-mostrar "=== TRIÁNGULO INVERTIDO ==="
+mostrar "" // (línea vacía)
+mostrar "=== TRIÁNGULO INVERTIDO ===" // === TRIÁNGULO INVERTIDO ===
 
 para (variable fila = 5; fila >= 1; fila--) {
     variable estrellas = ""
@@ -145,11 +92,11 @@ para (variable fila = 5; fila >= 1; fila--) {
         estrellas = estrellas + "* "
     }
 
-    mostrar estrellas
+    mostrar estrellas // * * * * *, * * * *, * * *, * *, *
 }
 
-mostrar ""
-mostrar "=== CUADRADO ==="
+mostrar "" // (línea vacía)
+mostrar "=== CUADRADO ===" // === CUADRADO ===
 
 para (variable fila = 1; fila <= 4; fila++) {
     variable linea = ""
@@ -158,28 +105,8 @@ para (variable fila = 1; fila <= 4; fila++) {
         linea = linea + "# "
     }
 
-    mostrar linea
+    mostrar linea // # # # # (4 veces)
 }`} />
-
-<Output text={`=== TRIÁNGULO ===
-*
-* *
-* * *
-* * * *
-* * * * *
-
-=== TRIÁNGULO INVERTIDO ===
-* * * * *
-* * * *
-* * *
-* *
-*
-
-=== CUADRADO ===
-# # # #
-# # # #
-# # # #
-# # # # `} />
 
 - El número de estrellas depende de la fila
 - En el triángulo normal: fila 1 = 1 estrella, fila 5 = 5 estrellas
@@ -202,26 +129,17 @@ para (variable album = 1; album <= 3; album++) {
 
     para (variable track = 1; track <= 5; track++) {
         si album == albumObjetivo y track == trackObjetivo {
-            mostrar "¡Encontrado! Álbum " + album + ", Track " + track
+            mostrar "¡Encontrado! Álbum " + album + ", Track " + track // ¡Encontrado! Álbum 2, Track 3
             encontrado = verdadero
             romper
         }
-        mostrar "Buscando en Álbum " + album + ", Track " + track
+        mostrar "Buscando en Álbum " + album + ", Track " + track // Buscando en Álbum 1, Track 1, ...
     }
 }
 
 si !encontrado {
     mostrar "No encontrado"
 }`} />
-
-<Output text={`Buscando en Álbum 1, Track 1
-Buscando en Álbum 1, Track 2
-Buscando en Álbum 1, Track 3
-Buscando en Álbum 1, Track 4
-Buscando en Álbum 1, Track 5
-Buscando en Álbum 2, Track 1
-Buscando en Álbum 2, Track 2
-¡Encontrado! Álbum 2, Track 3`} />
 
 - romper solo sale del bucle más interno
 - Necesitas una bandera (encontrado) para salir del externo
@@ -246,32 +164,15 @@ para (variable i = 1; i <= 10; i++) {
         maximo = numero
     }
 
-    mostrar "Número: " + numero + " | Suma: " + sumaTotal
+    mostrar "Número: " + numero + " | Suma: " + sumaTotal // Número: 5 | Suma: 5, Número: 10 | Suma: 15, ...
 }
 
-mostrar ""
-mostrar "=== ESTADÍSTICAS ==="
-mostrar "Total de números: " + contador
-mostrar "Suma total: " + sumaTotal
-mostrar "Promedio: " + (sumaTotal / contador)
-mostrar "Máximo: " + maximo`} />
-
-<Output text={`Número: 5 | Suma: 5
-Número: 10 | Suma: 15
-Número: 15 | Suma: 30
-Número: 20 | Suma: 50
-Número: 25 | Suma: 75
-Número: 30 | Suma: 105
-Número: 35 | Suma: 140
-Número: 40 | Suma: 180
-Número: 45 | Suma: 225
-Número: 50 | Suma: 275
-
-=== ESTADÍSTICAS ===
-Total de números: 10
-Suma total: 275
-Promedio: 27.5
-Máximo: 50`} />
+mostrar "" // (línea vacía)
+mostrar "=== ESTADÍSTICAS ===" // === ESTADÍSTICAS ===
+mostrar "Total de números: " + contador // Total de números: 10
+mostrar "Suma total: " + sumaTotal // Suma total: 275
+mostrar "Promedio: " + (sumaTotal / contador) // Promedio: 27.5
+mostrar "Máximo: " + maximo // Máximo: 50`} />
 
 - sumaTotal: acumula la suma de todos los valores
 - contador: cuenta cuántos elementos procesamos
@@ -283,7 +184,7 @@ Máximo: 50`} />
 
 Generar todas las combinaciones posibles de elementos.
 
-<Code code={`mostrar "=== COMBINACIONES DE 2 DADOS ==="
+<Code code={`mostrar "=== COMBINACIONES DE 2 DADOS ===" // === COMBINACIONES DE 2 DADOS ===
 
 variable combinaciones = 0
 
@@ -292,24 +193,14 @@ para (variable dado1 = 1; dado1 <= 6; dado1++) {
         variable suma = dado1 + dado2
 
         si suma == 7 {
-            mostrar "Dado 1: " + dado1 + " + Dado 2: " + dado2 + " = 7"
+            mostrar "Dado 1: " + dado1 + " + Dado 2: " + dado2 + " = 7" // Dado 1: 1 + Dado 2: 6 = 7, ...
             combinaciones++
         }
     }
 }
 
-mostrar ""
-mostrar "Total de combinaciones que suman 7: " + combinaciones`} />
-
-<Output text={`=== COMBINACIONES DE 2 DADOS ===
-Dado 1: 1 + Dado 2: 6 = 7
-Dado 1: 2 + Dado 2: 5 = 7
-Dado 1: 3 + Dado 2: 4 = 7
-Dado 1: 4 + Dado 2: 3 = 7
-Dado 1: 5 + Dado 2: 2 = 7
-Dado 1: 6 + Dado 2: 1 = 7
-
-Total de combinaciones que suman 7: 6`} />
+mostrar "" // (línea vacía)
+mostrar "Total de combinaciones que suman 7: " + combinaciones // Total de combinaciones que suman 7: 6`} />
 
 - Bucles anidados generan todas las combinaciones
 - 6 × 6 = 36 combinaciones totales
