--- a/lib/content/comentarios/docs.mdx
+++ b/lib/content/comentarios/docs.mdx
@@ -16,9 +16,7 @@ constante TIEMPO_HORNEADO = 15     // Minutos
 
 variable pizzasHechas = 0
 
-mostrar "Pizzas hechas: " + pizzasHechas  // Contador de producción`} />
-
-<Output text={`Pizzas hechas: 0`} />
+mostrar "Pizzas hechas: " + pizzasHechas  // Pizzas hechas: 0`} />
 
 - Los comentarios empiezan con dos barras: //
 - Todo lo que escribas después de // es ignorado por el programa
@@ -39,18 +37,15 @@ constante HUEVOS = 3
 variable pasoActual = 1
 
 // PASO 1: Mezclar ingredientes secos
-mostrar "Paso " + pasoActual + ": Tamizar harina"
+mostrar "Paso " + pasoActual + ": Tamizar harina"  // Paso 1: Tamizar harina
 pasoActual = pasoActual + 1
 
 // PASO 2: Agregar ingredientes húmedos
-mostrar "Paso " + pasoActual + ": Batir huevos"
+mostrar "Paso " + pasoActual + ": Batir huevos"  // Paso 2: Batir huevos
 pasoActual = pasoActual + 1
 
 // Para hacer: Agregar paso de decoración
 // Para hacer: Calcular calorías totales`} />
-
-<Output text={`Paso 1: Tamizar harina
-Paso 2: Batir huevos`} />
 
 - Explica pasos importantes o complejos de tu receta/código
 - Usa TODO: para dejar recordatorios de cosas pendientes
@@ -72,11 +67,9 @@ variable panquequesHechos = 0
 // mostrar "Debug: leche = " + LECHE
 
 panquequesHechos = 5
-mostrar "Panqueques listos: " + panquequesHechos
+mostrar "Panqueques listos: " + panquequesHechos  // Panqueques listos: 5
 
 // variable azucar = 50  // Desactivado: versión sin azúcar`} />
-
-<Output text={`Panqueques listos: 5`} />
 
 - Comentar líneas es útil para probar diferentes versiones de tu código
 - Puedes desactivar ingredientes/pasos sin borrarlos, por si los necesitas después
