--- a/lib/content/manejo-errores/docs.mdx
+++ b/lib/content/manejo-errores/docs.mdx
@@ -12,13 +12,10 @@ Ejecuta código que puede fallar y captura el error si ocurre.
     variable x = 10 / 0
     mostrar "Esto podría no ejecutarse"
 } capturar (error) {
-    mostrar "Error capturado: " + error
+    mostrar "Error capturado: " + error // Error capturado: División entre cero
 }
 
-mostrar "El programa continúa normalmente"`} />
-
-<Output text={`Error capturado: División entre cero
-El programa continúa normalmente`} />
+mostrar "El programa continúa normalmente" // El programa continúa normalmente`} />
 
 - El bloque 'intentar' contiene código que podría generar error
 - Si ocurre un error, se ejecuta el bloque 'capturar'
@@ -31,44 +28,35 @@ El programa continúa normalmente`} />
 Ejemplos de situaciones que generan errores y cómo manejarlos.
 
 <Code code={`// División entre cero
-mostrar "=== División entre cero ==="
+mostrar "=== División entre cero ===" // === División entre cero ===
 intentar {
     variable resultado = 10 / 0
     mostrar "Resultado: " + texto(resultado)
 } capturar (error) {
-    mostrar "Error: No se puede dividir entre cero"
+    mostrar "Error: No se puede dividir entre cero" // Error: No se puede dividir entre cero
 }
 
 mostrar ""
 
 // Acceso a índice inválido
-mostrar "=== Acceso a índice inválido ==="
+mostrar "=== Acceso a índice inválido ===" // === Acceso a índice inválido ===
 variable lista = [1, 2, 3]
 intentar {
     mostrar lista[10]
 } capturar (error) {
-    mostrar "Error: Índice fuera de rango"
+    mostrar "Error: Índice fuera de rango" // Error: Índice fuera de rango
 }
 
 mostrar ""
 
 // Propiedad de valor nulo
-mostrar "=== Propiedad de nulo ==="
+mostrar "=== Propiedad de nulo ===" // === Propiedad de nulo ===
 variable objeto = nulo
 intentar {
     mostrar objeto.nombre
 } capturar (error) {
-    mostrar "Error: No se puede acceder a propiedades de nulo"
+    mostrar "Error: No se puede acceder a propiedades de nulo" // Error: No se puede acceder a propiedades de nulo
 }`} />
-
-<Output text={`=== División entre cero ===
-Error: No se puede dividir entre cero
-
-=== Acceso a índice inválido ===
-Error: Índice fuera de rango
-
-=== Propiedad de nulo ===
-Error: No se puede acceder a propiedades de nulo`} />
 
 - División entre cero genera error
 - Acceder a índices fuera de rango en listas
@@ -85,19 +73,14 @@ Error: No se puede acceder a propiedades de nulo`} />
         }
         retornar a / b
     } capturar (error) {
-        mostrar "Advertencia: División inválida"
+        mostrar "Advertencia: División inválida" // Advertencia: División inválida
         retornar 0
     }
 }
 
-mostrar "10 / 2 = " + texto(dividirSeguro(10, 2))
-mostrar "10 / 0 = " + texto(dividirSeguro(10, 0))
-mostrar "15 / 3 = " + texto(dividirSeguro(15, 3))`} />
-
-<Output text={`10 / 2 = 5
-Advertencia: División inválida
-10 / 0 = 0
-15 / 3 = 5`} />
+mostrar "10 / 2 = " + texto(dividirSeguro(10, 2)) // 10 / 2 = 5
+mostrar "10 / 0 = " + texto(dividirSeguro(10, 0)) // 10 / 0 = 0
+mostrar "15 / 3 = " + texto(dividirSeguro(15, 3)) // 15 / 3 = 5`} />
 
 ## Validar Entrada de Usuario
 
@@ -118,22 +101,15 @@ Advertencia: División inválida
     }
 }
 
-mostrar "=== PROCESANDO EDADES ==="
+mostrar "=== PROCESANDO EDADES ===" // === PROCESANDO EDADES ===
 variable edad1 = procesarEdad("25")
-mostrar "Edad 1: " + texto(edad1)
+mostrar "Edad 1: " + texto(edad1) // Edad 1: 25
 
-variable edad2 = procesarEdad("abc")
-mostrar "Edad 2: " + texto(edad2)
+variable edad2 = procesarEdad("abc") // Error: No es un número válido
+mostrar "Edad 2: " + texto(edad2) // Edad 2: nulo
 
-variable edad3 = procesarEdad("200")
-mostrar "Edad 3: " + texto(edad3)`} />
-
-<Output text={`=== PROCESANDO EDADES ===
-Edad 1: 25
-Error: No es un número válido
-Edad 2: nulo
-Error: Edad fuera de rango válido
-Edad 3: nulo`} />
+variable edad3 = procesarEdad("200") // Error: Edad fuera de rango válido
+mostrar "Edad 3: " + texto(edad3) // Edad 3: nulo`} />
 
 ## Ejemplo Completo: Sistema de Compras
 
@@ -180,20 +156,13 @@ Edad 3: nulo`} />
 }
 
 variable carrito = nuevo CarritoCompras()
-carrito.agregarItem("Mouse", 150, 2)
-carrito.agregarItem("Teclado", 300, 1)
-carrito.agregarItem("Monitor", -100, 1)  // Precio inválido
-carrito.agregarItem("WebCam", 500, 0)    // Cantidad inválida
+carrito.agregarItem("Mouse", 150, 2) // Agregado: Mouse
+carrito.agregarItem("Teclado", 300, 1) // Agregado: Teclado
+carrito.agregarItem("Monitor", -100, 1) // Error: Precio debe ser positivo
+carrito.agregarItem("WebCam", 500, 0) // Error: Cantidad debe ser positiva
 
 mostrar ""
-mostrar "Total del carrito: $" + texto(carrito.calcularTotal())`} />
-
-<Output text={`Agregado: Mouse
-Agregado: Teclado
-Error: Precio debe ser positivo
-Error: Cantidad debe ser positiva
-
-Total del carrito: $600`} />
+mostrar "Total del carrito: $" + texto(carrito.calcularTotal()) // Total del carrito: $600`} />
 
 Resumen de manejo de errores:
 - intentar { } - Código que puede fallar
