--- a/lib/content/metodos-strings/docs.mdx
+++ b/lib/content/metodos-strings/docs.mdx
@@ -11,17 +11,13 @@ Como el contador de palabras y caracteres que aparece abajo a la izquierda en Wo
 <Code code={`variable titulo = "Mi Documento Importante"
 variable parrafo = "Este es un párrafo de ejemplo para contar caracteres."
 
-mostrar "El título tiene " + titulo.longitud() + " caracteres"
-mostrar "El párrafo tiene " + parrafo.longitud() + " caracteres"
+mostrar "El título tiene " + titulo.longitud() + " caracteres"  // El título tiene 23 caracteres
+mostrar "El párrafo tiene " + parrafo.longitud() + " caracteres"  // El párrafo tiene 54 caracteres
 
 variable tweet = "Hola mundo"
 variable limite = 280
 variable restantes = limite - tweet.longitud()
-mostrar "Te quedan " + restantes + " caracteres"`} />
-
-<Output text={`El título tiene 23 caracteres
-El párrafo tiene 54 caracteres
-Te quedan 270 caracteres`} />
+mostrar "Te quedan " + restantes + " caracteres"  // Te quedan 270 caracteres`} />
 
 - .longitud() retorna la cantidad de caracteres del texto
 - Los espacios cuentan como caracteres
@@ -36,18 +32,13 @@ Como el botón 'Aa' en Word que cambia el texto a mayúsculas o minúsculas. Muy
 variable grito = "no me gusta esto"
 variable email = "USUARIO@EMAIL.COM"
 
-mostrar titulo.mayusculas()
-mostrar grito.mayusculas()
-mostrar email.minusculas()
+mostrar titulo.mayusculas()  // MI DOCUMENTO IMPORTANTE
+mostrar grito.mayusculas()  // NO ME GUSTA ESTO
+mostrar email.minusculas()  // usuario@email.com
 
 variable nombre = "JUAN PÉREZ"
 variable nombreNormalizado = nombre.minusculas()
-mostrar "Hola, " + nombreNormalizado`} />
-
-<Output text={`MI DOCUMENTO IMPORTANTE
-NO ME GUSTA ESTO
-usuario@email.com
-Hola, juan pérez`} />
+mostrar "Hola, " + nombreNormalizado  // Hola, juan pérez`} />
 
 - .mayusculas() convierte todo el texto a MAYÚSCULAS
 - .minusculas() convierte todo el texto a minúsculas
@@ -62,16 +53,11 @@ Cuando copias texto de internet y pegas en Word, a veces trae espacios extra al 
 variable emailPegado = "  juan@email.com  "
 variable nombreConEspacios = "    María    "
 
-mostrar "Con espacios: '" + textoCopiado + "'"
-mostrar "Sin espacios: '" + textoCopiado.recortar() + "'"
+mostrar "Con espacios: '" + textoCopiado + "'"  // Con espacios: '   Hola mundo   '
+mostrar "Sin espacios: '" + textoCopiado.recortar() + "'"  // Sin espacios: 'Hola mundo'
 
-mostrar emailPegado.recortar()
-mostrar nombreConEspacios.recortar()`} />
-
-<Output text={`Con espacios: '   Hola mundo   '
-Sin espacios: 'Hola mundo'
-juan@email.com
-María`} />
+mostrar emailPegado.recortar()  // juan@email.com
+mostrar nombreConEspacios.recortar()  // María`} />
 
 - .recortar() elimina espacios al inicio y al final del texto
 - NO elimina espacios del medio, solo de los bordes
@@ -86,23 +72,15 @@ Como usar Ctrl+F en Word para buscar una palabra. Puedes verificar si un texto c
 variable email = "usuario@gmail.com"
 variable archivo = "reporte_final.pdf"
 
-mostrar documento.incluye("Programación")
-mostrar documento.incluye("Python")
+mostrar documento.incluye("Programación")  // verdadero
+mostrar documento.incluye("Python")  // falso
 
-mostrar email.incluye("@")
-mostrar email.terminaCon(".com")
-mostrar email.empiezaCon("usuario")
+mostrar email.incluye("@")  // verdadero
+mostrar email.terminaCon(".com")  // verdadero
+mostrar email.empiezaCon("usuario")  // verdadero
 
-mostrar archivo.terminaCon(".pdf")
-mostrar archivo.terminaCon(".docx")`} />
-
-<Output text={`verdadero
-falso
-verdadero
-verdadero
-verdadero
-verdadero
-falso`} />
+mostrar archivo.terminaCon(".pdf")  // verdadero
+mostrar archivo.terminaCon(".docx")  // falso`} />
 
 - .incluye(texto) verifica si contiene ese texto → retorna verdadero o falso
 - .empiezaCon(texto) verifica si comienza con ese texto
@@ -118,19 +96,14 @@ Como la función Ctrl+H 'Buscar y Reemplazar' en Word. Encuentra todas las veces
 variable correccion = "El perro es un aninal muy leal"
 variable telefono = "123-456-7890"
 
-mostrar documento.reemplazar("mundo", "universo")
+mostrar documento.reemplazar("mundo", "universo")  // Hola universo, universo feliz
 
-mostrar correccion.reemplazar("aninal", "animal")
+mostrar correccion.reemplazar("aninal", "animal")  // El perro es un animal muy leal
 
-mostrar telefono.reemplazar("-", "")
+mostrar telefono.reemplazar("-", "")  // 1234567890
 
 variable texto = "Me gusta Python. Python es genial."
-mostrar texto.reemplazar("Python", "HispanoLang")`} />
-
-<Output text={`Hola universo, universo feliz
-El perro es un animal muy leal
-1234567890
-Me gusta HispanoLang. HispanoLang es genial.`} />
+mostrar texto.reemplazar("Python", "HispanoLang")  // Me gusta HispanoLang. HispanoLang es genial.`} />
 
 - .reemplazar(buscar, reemplazo) cambia TODAS las apariciones
 - Si la palabra aparece 5 veces, las cambia las 5 veces
@@ -144,19 +117,15 @@ Como cuando en Word usas varias herramientas seguidas: primero quitas espacios, 
 
 <Code code={`variable emailSucio = "  USUARIO@EMAIL.COM  "
 variable emailLimpio = emailSucio.recortar().minusculas()
-mostrar emailLimpio
+mostrar emailLimpio  // usuario@email.com
 
 variable titulo = "   MI DOCUMENTO IMPORTANTE   "
 variable tituloFormateado = titulo.recortar().minusculas()
-mostrar tituloFormateado
+mostrar tituloFormateado  // mi documento importante
 
 variable texto = "  Hola MUNDO  "
 variable procesado = texto.recortar().mayusculas().reemplazar("MUNDO", "AMIGO")
-mostrar procesado`} />
-
-<Output text={`usuario@email.com
-mi documento importante
-HOLA AMIGO`} />
+mostrar procesado  // HOLA AMIGO`} />
 
 - Puedes usar varios métodos seguidos, uno tras otro
 - Se ejecutan de izquierda a derecha, en orden
@@ -170,27 +139,20 @@ Situaciones reales donde estos métodos son útiles, como limpiar datos que copi
 
 <Code code={`variable nombreUsuario = "  MARIA_DEV  "
 variable usuarioLimpio = nombreUsuario.recortar().minusculas()
-mostrar "Usuario: " + usuarioLimpio
+mostrar "Usuario: " + usuarioLimpio  // Usuario: maria_dev
 
 variable emailFormulario = "Juan@Email.COM"
 variable emailNormalizado = emailFormulario.minusculas()
-mostrar "Email guardado: " + emailNormalizado
+mostrar "Email guardado: " + emailNormalizado  // Email guardado: juan@email.com
 
 variable busqueda = "Cómo hacer pizza casera"
-mostrar "Buscando: " + busqueda
-mostrar "Longitud: " + busqueda.longitud() + " caracteres"
+mostrar "Buscando: " + busqueda  // Buscando: Cómo hacer pizza casera
+mostrar "Longitud: " + busqueda.longitud() + " caracteres"  // Longitud: 25 caracteres
 
 variable textoImportado = "   Este texto tiene espacios extra   "
 variable textoCorregido = textoImportado.recortar()
-mostrar "Antes: '" + textoImportado + "'"
-mostrar "Después: '" + textoCorregido + "'"`} />
-
-<Output text={`Usuario: maria_dev
-Email guardado: juan@email.com
-Buscando: Cómo hacer pizza casera
-Longitud: 25 caracteres
-Antes: '   Este texto tiene espacios extra   '
-Después: 'Este texto tiene espacios extra'`} />
+mostrar "Antes: '" + textoImportado + "'"  // Antes: '   Este texto tiene espacios extra   '
+mostrar "Después: '" + textoCorregido + "'"  // Después: 'Este texto tiene espacios extra'`} />
 
 - Limpia datos antes de guardarlos: quita espacios, normaliza mayúsculas
 - Valida formatos: emails deben tener @, archivos deben terminar en extensión
